--- a/nice-view/index.html
+++ b/nice-view/index.html
@@ -36,7 +36,7 @@
   </header>
   <main class="main">
     <div class="nice-view">
-      <img class="nice-view-dekor" src="img/Nice-view/dekor.png" alt="image">
+      <img class="nice-view-dekor" src="img/nice-view/dekor.png" alt="image">
       <div class="container">
         <div class="inner-nice-view">
           <div class="nice-view-content">
