--- a/car/index.html
+++ b/car/index.html
@@ -5,51 +5,98 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Домашка №13</title>
+  <title>car</title>
 </head>
 
 <body>
   <div class="wrapper">
     <header class="header">
     </header>
-    <main class="main">
 
+    <main class="main">
       <div class="car">
         <div class="car__container">
-
           <div class="car-body">
-
-            <div class="car-body-top">
-              <div class="car-body-top__left"></div>
-              <div class="car-body-top__right"></div>
-              <div class="window-driver-inner">
-                <div class="window-driver"></div>
+            <div class="car-top car-top--position">
+              <div class="car-top__body">
+                <div class="car-top__left"></div>
+                <div class="car-top__right"></div>
+                <div class="car-top__window-driver driver-window">
+                  <div class="driver-window__item"></div>
+                </div>
+                <div class="car-top__window-passenger passenger-window">
+                  <div class="passenger-window__item"></div>
+                </div>
+                <div class="car-top__window-back window-back"></div>
               </div>
-              <div class="window-passenger-inner">
-                <div class="window-passenger"></div>
-              </div>
-              <div class="window-rear"></div>
             </div>
-
             <div class="car-middle">
-              <div class="car-middle__hood-inner">
-                <div class="hood"></div>
+              <div class="car-middle__hood hood-car">
+                <div class="hood-car__item"></div>
               </div>
               <div class="car-middle__dekor"></div>
-              <div class="car-middle__trunk-inner">
-                <div class="trunk"></div>
+              <div class="car-middle__trunk trunk-car">
+                <div class="trunk-car__item"></div>
               </div>
             </div>
-
             <div class="car-body-bottom">
               <div class="car-body-bottom__left"></div>
               <div class="car-body-bottom__right"></div>
-              <div class="front-fender"></div>
-              <div class="front-fender-shadow"></div>
-              <div class="back-fender"></div>
-              <div class="back-fender-shadow"></div>
-              <div class="bumper bumper--back"></div>
-              <div class="bumper bumper--front"></div>
+              <div class="fender">
+                <div class="fender__front front-fender">
+                  <div class="front-fender__item"></div>
+                </div>
+                <div class="fender__back back-fender">
+                  <div class="back-fender__item"></div>
+                </div>
+              </div>
+              <div class="fender-shadow">
+                <div class="fender-shadow__front back-shadow-front">
+                  <div class="front-shadow-fender__item"></div>
+                </div>
+                <div class="fender-shadow__back back-shadow-fender">
+                  <div class="back-shadow-fender__item"></div>
+                </div>
+              </div>
+              <div class="bumper">
+                <div class="bumper__front front-bumper">
+                  <div class="front-bumper__item"></div>
+                </div>
+                <div class="bumper__back back-bumper">
+                  <div class="back-bumper__item"></div>
+                </div>
+              </div>
+              <div class="door-decor">
+                <div class="door-decor__front front-decor-door">
+                  <div class="front-decor-door__item"></div>
+                </div>
+                <div class="door-decor__back back-decor-door">
+                  <div class="back-decor-door__item"></div>
+                </div>
+              </div>
+              <div class="handle">
+                <div class="handle__front front-handle">
+                  <div class="front-handle__item"></div>
+                </div>
+                <div class="handle__back back-handle">
+                  <div class="back-handle__item"></div>
+                </div>
+              </div>
+              <div class="back-decor back-decor--position">
+                <div class="back-decor__item"></div>
+              </div>
+              <div class="front-light front-light--position">
+                <div class="front-light__base"></div>
+                <div class="front-light__glass"></div>
+              </div>
+              <div class="back-light back-light--position"></div>
+              <div class="fuel-cap fuel-cap--position">
+                <div class="fuel-cap__body">
+                  <div class="fuel-cap__back"></div>
+                  <div class="fuel-cap__front"></div>
+                </div>
+              </div>
+              <div class="fuel-cork fuel-cork--position"></div>
               <div class="wheel wheel--front">
                 <div class="wheel__tire-decor">
                   <div class="wheel__disk">
@@ -74,30 +121,8 @@
                   </div>
                 </div>
               </div>
-              <div class="door-decor door-decor--back"></div>
-              <div class="door-decor door-decor--front"></div>
-              <div class="handle handle--back"></div>
-              <div class="handle-inner">
-                <div class="handle handle--front"></div>
-              </div>
-              <div class="handle-inner">
-                <div class="back-decor"></div>
-              </div>
-              <div class="front-light">
-                <div class="front-light__base"></div>
-                <div class="front-light__glass"></div>
-              </div>
-              <div class="back-light"></div>
-              <div class="fuel-cap">
-                <div class="fuel-cap__body">
-                  <div class="fuel-cap__back"></div>
-                  <div class="fuel-cap__front"></div>
-                </div>
-              </div>
-              <div class="fuel-cork"></div>
             </div>
-
-            <div class="hover-car">
+            <div class="hover-car hover-car--position">
               <p>:HOVER</p>
             </div>
           </div>
@@ -106,6 +131,7 @@
 
     </main>
     <footer class="footer">
+
     </footer>
   </div>
 </body>
