--- a/test/index.html
+++ b/test/index.html
@@ -1,252 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>test</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <title>Домашка №19</title>
 </head>
 
 <body>
   <div class="wrapper">
-    <header class="header header--fix">
-      <div class="header__container">
-        <div class="header__inner">
-          <a class="header__logo logo" href="#">
-            <img src="img/icon/logo.svg" alt="image logo">
-          </a>
-          <div class="header__menu menu">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a class="menu__link" href="#">Home</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#">About Us</a>
-              </li>
-              <li class="menu__item menu__item--icon">
-                <a class="menu__link menu__link--icon" href="#"> Pages</a>
-                <ul class="menu-level1">
-                  <li class="menu-level1__item">
-                    <a class="menu-level1__link" href="#">Page1</a>
-                    <ul class="menu-level2">
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page1-1</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page1-2</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page1-3</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-level1__item">
-                    <a class="menu-level1__link" href="#">Page2</a>
-                    <ul class="menu-level2">
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page2-1</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page2-2</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-level1__item">
-                    <a class="menu-level1__link" href="#">Page3</a>
-                    <ul class="menu-level2">
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page3-1</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page3-2</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page3-3</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page3-4</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page3-5</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-level1__item">
-                    <a class="menu-level1__link" href="#">Page4</a>
-                    <ul class="menu-level2">
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page4-1</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page4-2</a>
-                      </li>
-                      <li class="menu-level2__item">
-                        <a class="menu-level2__link" href="#">Page4-3</a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#">Services</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#"> Blog</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-          <div class="header__btn btn">
-            <a class="btn__link" href="#">Get Consulting</a>
-          </div>
-        </div>
-      </div>
+    <header class="header">
+      <h1 class="title-header">!--- Домашка №19 ---!</h1>
     </header>
-    <main class="main">
-
-      <!-- ------------------------Перший вариант картки--------------------- -->
-
-      <div class="team">
-        <div class="team__container">
-          <div class="team__row">
-            <div class="team__card card-team">
-              <div class="card-team__image">
-                <img src="img/team/image-1.webp" srcset="img/team/image-1@2x.webp 2x, img/team/image-1@3x.webp 3x"
-                  alt="image">
-              </div>
-              <div class="card-team__social social-card">
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/instagram.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/fb.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/twiter.svg" alt="social icon">
-                </a>
-              </div>
-              <div class="card-team__info">
-                <h4 class="card-team__name">Nattasha Kelvin</h4>
-                <h6 class="card-team__post">Managing Director</h6>
-              </div>
-            </div>
-            <div class="team__card card-team">
-              <div class="card-team__image">
-                <img src="img/team/image-2.webp" srcset="img/team/image-2@2x.webp 2x, img/team/image-2@3x.webp 3x"
-                  alt="image">
-              </div>
-              <div class="card-team__social social-card">
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/instagram.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/fb.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/twiter.svg" alt="social icon">
-                </a>
-              </div>
-              <div class="card-team__info">
-                <h4 class="card-team__name">David Simpson</h4>
-                <h6 class="card-team__post">Designer</h6>
-              </div>
-            </div>
-            <div class="team__card card-team">
-              <div class="card-team__image">
-                <img src="img/team/image-3.webp" srcset="img/team/image-3@2x.webp 2x, img/team/image-3@3x.webp 3x"
-                  alt="image">
-              </div>
-              <div class="card-team__social social-card">
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/instagram.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/fb.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/twiter.svg" alt="social icon">
-                </a>
-              </div>
-              <div class="card-team__info">
-                <h4 class="card-team__name">Madeleine Grant</h4>
-                <h6 class="card-team__post">Marketing Specialist</h6>
+    <main class="page">
+      <div class="page__cards-top cards-top">
+        <div class="cards-top__container">
+          <div class="cards-top__items">
+            <div class="cards-top__item top-card">
+              <img src="img/cards-top/img-1.webp"
+                srcset="img/cards-top/img-1@2x.webp 2x, img/cards-top/img-1@3x.webp 3x" alt="image">
+              <div class="top-card__content">
+                <h5 class="top-card__label">Low Price</h5>
+                <h4 class="top-card__title">High Coziness</h4>
+                <div class="top-card__discount">UPTO 50% OFF</div>
+                <a class="top-card__link" href="#">Explore Items</a>
               </div>
             </div>
           </div>
-          <div class="team__row">
-            <div class="team__card card-team">
-              <div class="card-team__image">
-                <img src="img/team/image-4.webp" srcset="img/team/image-4@2x.webp 2x, img/team/image-4@3x.webp 3x"
-                  alt="image">
-              </div>
-              <div class="card-team__social social-card">
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/instagram.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/fb.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/twiter.svg" alt="social icon">
-                </a>
-              </div>
-              <div class="card-team__info">
-                <h4 class="card-team__name">Jonathan Coleman</h4>
-                <h6 class="card-team__post">Managing Director</h6>
-              </div>
-            </div>
-            <div class="team__card card-team">
-              <div class="card-team__image">
-                <img src="img/team/image-5.webp" srcset="img/team/image-5@2x.webp 2x, img/team/image-5@3x.webp 3x"
-                  alt="image">
-              </div>
-              <div class="card-team__social social-card">
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/instagram.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/fb.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/twiter.svg" alt="social icon">
-                </a>
-              </div>
-              <div class="card-team__info">
-                <h4 class="card-team__name">Wanda Forsyth</h4>
-                <h6 class="card-team__post">Designer</h6>
-              </div>
-            </div>
-            <div class="team__card card-team">
-              <div class="card-team__image">
-                <img src="img/team/image-6.webp" srcset="img/team/image-6@2x.webp 2x, img/team/image-6@3x.webp 3x"
-                  alt="image">
-              </div>
-              <div class="card-team__social social-card">
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/instagram.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/fb.svg" alt="social icon">
-                </a>
-                <a class="social-card__link" href="#">
-                  <img src="img/icon/team/twiter.svg" alt="social icon">
-                </a>
-              </div>
-              <div class="card-team__info">
-                <h4 class="card-team__name">Austin Randall</h4>
-                <h6 class="card-team__post">Marketing Specialist</h6>
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
-
-
     </main>
-    <footer class="footer">
+
+    <footer class=" footer">
+      <p>
+        Домашка №19 - 2023
+      </p>
     </footer>
   </div>
 </body>
