--- a/lesson_21_test/index.html
+++ b/lesson_21_test/index.html
@@ -37,9 +37,11 @@
             </ul>
           </div>
         </nav>
-        <form class="header__form-search search-form" action="#" method="post">
-          <img src="img/icons/search.svg" alt="search logo">
-          <input class="search-form__input" type="text" required name="search" placeholder="Search">
+        <form class="header__form-search search-form" action="#" method="get">
+          <div>
+            <img src="img/icons/search.svg" alt="search logo">
+            <input class="search-form__input" type="text" required name="search" placeholder="Search">
+          </div>
         </form>
         <div class="header__actions actions-header">
           <a class="actions-header__item" href="#">
@@ -114,7 +116,6 @@
               <div class="card-arrival__img">
                 <img src="img/arrival/img-1.webp" srcset="img/arrival/img-1@2x.webp 2x, img/arrival/img-1@3x.webp 3x"
                   alt="image">
-                <!-- <img class="fatigue" src="img/img-1.webp" alt="gif"> -->
               </div>
               <h5 class="card-arrival__title"><span>Knitted Joggers</span></h5>
             </a>
@@ -142,6 +143,7 @@
           </div>
         </div>
       </section>
+
       <section class="saving-zone">
         <div class="saving-zone__container">
           <h3 class="saving-zone__title">Big Saving Zone</h3>
@@ -172,7 +174,7 @@
                 </div>
               </article>
             </div>
-            <div class="saving-zone__item card-saving card-saving--content-right card-savings--btn-label">
+            <div class="saving-zone__item card-saving card-saving--content-right card-saving--btn-label">
               <img src="img/saving-zone/img-2.webp"
                 srcset="img/saving-zone/img-2@2x.webp 2x, img/saving-zone/img-2@3x.webp 3x" alt="image">
               <div class="card-saving__btn-label">
@@ -225,7 +227,7 @@
                 </div>
               </article>
             </div>
-            <div class="saving-zone__item card-saving card-saving--large card-savings--btn-label">
+            <div class="saving-zone__item card-saving card-saving--large card-saving--btn-label">
               <img src="img/saving-zone/img-4.webp"
                 srcset="img/saving-zone/img-4@2x.webp 2x, img/saving-zone/img-4@3x.webp 3x" alt="image">
               <div class="card-saving__btn-label">
@@ -281,6 +283,31 @@
           </div>
         </div>
       </section>
+      <div class="fashion">
+        <div class="fashion__container">
+          <div class="fashion__left-block">
+            <!-- <div class="fashion__img-left-block"> -->
+            <img src="img/fashion/img-1.webp" srcset="img/fashion/img-1@2x.webp 2x, img/fashion/img-1@3x.webp 3x"
+              alt="image">
+            <!-- </div> -->
+            <article class="fashion__content">
+              <h4 class="fashion__title">WE MADE YOUR EVERYDAY FASHION BETTER!</h4>
+              <div class="fashion__text">
+                <p>
+                  In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable &
+                  Affordable fashion 24/7
+                </p>
+              </div>
+              <a class="fashion__btn" href="#">Shop Now</a>
+            </article>
+          </div>
+          <div class="fashion__right-block">
+            <img src="img/fashion/img-2.webp" srcset="img/fashion/img-2@2x.webp 2x, img/fashion/img-2@3x.webp 3x"
+              alt="image dekor">
+            <!-- <img class="fatigue" src="img/pngwing.com (59).png" alt="gif"> -->
+          </div>
+        </div>
+      </div>
     </main>
     <footer class=" footer">
       <p>
