--- a/car/index.html
+++ b/car/index.html
@@ -21,7 +21,7 @@
           <ul class="interactive-switches">
             <li class="interactive-switches-item">
               <div class="switch-item">
-                <div class="switch-name">window driver</div>
+                <div class="switch-name">driver's window</div>
                 <label class="switch ">
                   <input class="switch-input" data-switch='1' type="checkbox">
                   <span class="slider round"></span>
@@ -30,7 +30,7 @@
             </li>
             <li class="interactive-switches-item">
               <div class="switch-item">
-                <div class="switch-name">window pass</div>
+                <div class="switch-name">passenger window</div>
                 <label class="switch ">
                   <input class="switch-input" data-switch='2' type="checkbox">
                   <span class="slider round"></span>
