--- a/car/index.html
+++ b/car/index.html
@@ -19,59 +19,47 @@
         <div class="interactive-title">Interactive block</div>
         <div class="interactive-panel">
           <ul class="interactive-switches">
-            <li class="interactive-switches-item">
-              <div class="switch-item">
-                <div class="switch-name">driver's window</div>
-                <label class="switch ">
-                  <input class="switch-input" data-switch='1' type="checkbox">
-                  <span class="slider round"></span>
-                </label>
-              </div>
+            <li class="switch-item">
+              <div class="switch-name">driver's window</div>
+              <label class="switch ">
+                <input class="switch-input" data-switch='1' type="checkbox">
+                <span class="slider round"></span>
+              </label>
             </li>
-            <li class="interactive-switches-item">
-              <div class="switch-item">
-                <div class="switch-name">passenger window</div>
-                <label class="switch ">
-                  <input class="switch-input" data-switch='2' type="checkbox">
-                  <span class="slider round"></span>
-                </label>
-              </div>
+            <li class="switch-item">
+              <div class="switch-name">passenger window</div>
+              <label class="switch ">
+                <input class="switch-input" data-switch='2' type="checkbox">
+                <span class="slider round"></span>
+              </label>
             </li>
-            <li class="interactive-switches-item">
-              <div class="switch-item">
-                <div class="switch-name">car bonnet</div>
-                <label class="switch ">
-                  <input class="switch-input" data-switch='3' type="checkbox">
-                  <span class="slider round"></span>
-                </label>
-              </div>
+            <li class="switch-item">
+              <div class="switch-name">car bonnet</div>
+              <label class="switch ">
+                <input class="switch-input" data-switch='3' type="checkbox">
+                <span class="slider round"></span>
+              </label>
             </li>
-            <li class="interactive-switches-item">
-              <div class="switch-item">
-                <div class="switch-name">car trunk</div>
-                <label class="switch ">
-                  <input class="switch-input" data-switch='4' type="checkbox">
-                  <span class="slider round"></span>
-                </label>
-              </div>
+            <li class="switch-item">
+              <div class="switch-name">car trunk</div>
+              <label class="switch ">
+                <input class="switch-input" data-switch='4' type="checkbox">
+                <span class="slider round"></span>
+              </label>
             </li>
-            <li class="interactive-switches-item">
-              <div class="switch-item">
-                <div class="switch-name">light</div>
-                <label class="switch ">
-                  <input class="switch-input" data-switch='5' type="checkbox">
-                  <span class="slider round"></span>
-                </label>
-              </div>
+            <li class="switch-item">
+              <div class="switch-name">light</div>
+              <label class="switch ">
+                <input class="switch-input" data-switch='5' type="checkbox">
+                <span class="slider round"></span>
+              </label>
             </li>
-            <li class="interactive-switches-item">
-              <div class="switch-item">
-                <div class="switch-name">fuel</div>
-                <label class="switch ">
-                  <input class="switch-input" data-switch='6' type="checkbox">
-                  <span class="slider round"></span>
-                </label>
-              </div>
+            <li class="switch-item">
+              <div class="switch-name">fuel</div>
+              <label class="switch ">
+                <input class="switch-input" data-switch='6' type="checkbox">
+                <span class="slider round"></span>
+              </label>
             </li>
           </ul>
         </div>
