--- a/giraffe-club/index.html
+++ b/giraffe-club/index.html
@@ -40,11 +40,30 @@
 				<div class="header__action action-header">
 					<a class="action-header__item _icon-phone" href="#"></a>
 					<a class="action-header__item _icon-location" href="#"></a>
-					<a class="action-header__item _icon-email" href="#"></a>
+					<a class="action-header__item _icon-email " href="#"></a>
 				</div>
+				<div class="header__logo">Giraffe Club</div>
+				<button class="icon-menu" type="button"><span></span></button>
 			</div>
 		</header>
-		<main class="main">
+		<main class="page">
+			<section class="page__hero hero">
+				<div class="hero__container">
+					<div class="hero__content">
+						<h1 class="hero__title">Giraffe Club</h1>
+						<div class="hero__text">
+							<p>
+								Офіційний сертифікований центр підготовки до міжнародних екзаменів Cambrige
+							</p>
+						</div>
+						<button class="hero__button button">Отримати консультацію</button>
+					</div>
+					<div class="hero__img">
+						<img src="img/hero/img-1.webp" srcset="img/hero/img-1@2x.webp 2x, img/hero/img-1@3x.webp 3x"
+							alt="image hero">
+					</div>
+				</div>
+			</section>
 
 		</main>
 		<footer class="footer"></footer>
