--- a/trading_skills/index.html
+++ b/trading_skills/index.html
@@ -25,12 +25,16 @@
 									course</span></h1>
 						</div>
 						<div class="section-image__img-box">
-							<picture><source srcset="img/hero-img.webp" type="image/webp"><img class="ibg ibg--top" src="img/hero-img.jpg" alt="Image"></picture>
+							<picture>
+								<source srcset="img/hero-img.webp" type="image/webp"><img class="ibg ibg--top" src="img/hero-img.jpg"
+									alt="Image">
+							</picture>
 						</div>
 					</div>
 					<div class="hero__info block-info-cards">
 						<div class="block-info-cards__items">
-							<div class="block-info-cards__item information-card information-card--min-height-one information-card--blue-bg-1">
+							<div
+								class="block-info-cards__item information-card information-card--min-height-one information-card--blue-bg-1">
 								<div class="information-card__text">
 									<p>
 										Embark on a transformative journey in financial trading with our expert-led 3-month course,
@@ -38,7 +42,8 @@
 									</p>
 								</div>
 							</div>
-							<div class="block-info-cards__item information-card information-card--min-height-one information-card--blue-bg-1">
+							<div
+								class="block-info-cards__item information-card information-card--min-height-one information-card--blue-bg-1">
 								<div class="information-card__text">
 									<p>
 										Designed for both beginners and seasoned investors, our program equips you with essential skills to
@@ -54,7 +59,8 @@
 				<div class="info__container">
 					<div class="block-info-cards">
 						<div class="block-info-cards__items">
-							<article class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Professional training</h3>
 								<div class="information-card__text">
 									<p>
@@ -63,7 +69,8 @@
 									</p>
 								</div>
 							</article>
-							<article class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Course duration</h3>
 								<div class="information-card__text">
 									<p>
@@ -71,7 +78,8 @@
 									</p>
 								</div>
 							</article>
-							<article class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">High rating</h3>
 								<div class="information-card__text">
 									<p>
@@ -79,7 +87,8 @@
 									</p>
 								</div>
 							</article>
-							<article class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Practical assignments</h3>
 								<div class="information-card__text">
 									<p>
@@ -88,7 +97,8 @@
 									</p>
 								</div>
 							</article>
-							<article class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Bonus module</h3>
 								<div class="information-card__text">
 									<p>
@@ -104,12 +114,16 @@
 				<div class="career__container">
 					<div class="section-image section-image--img-left">
 						<div class="section-image__img-box">
-							<picture><source srcset="img/career-img.webp" type="image/webp"><img class="ibg ibg--top" src="img/career-img.jpg" alt="Image"></picture>
+							<picture>
+								<source srcset="img/career-img.webp" type="image/webp"><img class="ibg ibg--top"
+									src="img/career-img.jpg" alt="Image">
+							</picture>
 						</div>
 						<div class="block-info-cards">
 							<h2 class="block-info-cards__title title">Career opportunities</h2>
 							<div class="block-info-cards__items">
-								<article class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
+								<article
+									class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
 									<h3 class="information-card__title information-card__title--color-one title ">Aspiring professionals
 									</h3>
 									<div class="information-card__text">
@@ -118,7 +132,8 @@
 										</p>
 									</div>
 								</article>
-								<article class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
+								<article
+									class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
 									<h3 class="information-card__title information-card__title--color-one title">Beginner traderss</h3>
 									<div class="information-card__text">
 										<p>
@@ -136,7 +151,8 @@
 					<div class="block-info-cards block-info-cards--bg-two">
 						<h2 class="block-info-cards__title title">Why our course</h2>
 						<div class="block-info-cards__items">
-							<article class="block-info-cards__item information-card information-card--red-bg-2 item information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 item information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Current market relevance
 								</h3>
 								<div class="information-card__text">
@@ -145,7 +161,8 @@
 									</p>
 								</div>
 							</article>
-							<article class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Comprehensive curriculum
 								</h3>
 								<div class="information-card__text">
@@ -155,7 +172,8 @@
 									</p>
 								</div>
 							</article>
-							<article class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Capstone project
 								</h3>
 								<div class="information-card__text">
@@ -172,9 +190,10 @@
 				<div class="benefits__container">
 					<div class="section-image section-image--img-right">
 						<div class="block-info-cards">
-							<h2 class="block-info-cards__title title">Career opportunities</h2>
+							<h2 class="block-info-cards__title title">Course benefits</h2>
 							<div class="block-info-cards__items">
-								<article class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
+								<article
+									class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
 									<h3 class="information-card__title information-card__title--color-one title ">Income growth
 									</h3>
 									<div class="information-card__text">
@@ -183,7 +202,8 @@
 										</p>
 									</div>
 								</article>
-								<article class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
+								<article
+									class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
 									<h3 class="information-card__title information-card__title--color-one title">Flexible schedule</h3>
 									<div class="information-card__text">
 										<p>
@@ -191,7 +211,8 @@
 										</p>
 									</div>
 								</article>
-								<article class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
+								<article
+									class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
 									<h3 class="information-card__title information-card__title--color-one title">Financial independence
 									</h3>
 									<div class="information-card__text">
@@ -203,7 +224,10 @@
 							</div>
 						</div>
 						<div class="section-image__img-box">
-							<picture><source srcset="img/benefits.webp" type="image/webp"><img class="ibg ibg--top" src="img/benefits.jpg" alt="Image"></picture>
+							<picture>
+								<source srcset="img/benefits.webp" type="image/webp"><img class="ibg ibg--top" src="img/benefits.jpg"
+									alt="Image">
+							</picture>
 						</div>
 					</div>
 				</div>
@@ -213,7 +237,8 @@
 					<div class="block-info-cards block-info-cards--bg-two">
 						<h2 class="block-info-cards__title title">Enrollment process</h2>
 						<div class="block-info-cards__items">
-							<article class="block-info-cards__item information-card information-card--red-bg-2 item information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 item information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Course fee
 								</h3>
 								<div class="information-card__text">
@@ -222,7 +247,8 @@
 									</p>
 								</div>
 							</article>
-							<article class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
+							<article
+								class="block-info-cards__item information-card information-card--red-bg-2 information-card--min-height-two">
 								<h3 class="information-card__title title information-card__title--color-two">Easy registration
 								</h3>
 								<div class="information-card__text">
@@ -239,12 +265,16 @@
 				<div class="contact__container">
 					<div class="section-image section-image--img-left">
 						<div class="section-image__img-box">
-							<picture><source srcset="img/contact.webp" type="image/webp"><img class="ibg ibg--top" src="img/contact.jpg" alt="Image"></picture>
+							<picture>
+								<source srcset="img/contact.webp" type="image/webp"><img class="ibg ibg--top" src="img/contact.jpg"
+									alt="Image">
+							</picture>
 						</div>
 						<div class="block-info-cards">
 							<h2 class="block-info-cards__title title">Contact us</h2>
 							<div class="block-info-cards__items">
-								<div class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
+								<div
+									class="block-info-cards__item information-card information-card--blue-bg-2 information-card--min-height-two">
 									<h3 class="information-card__title information-card__title--color-one title ">Address
 									</h3>
 									<div class="information-card__text">
@@ -281,25 +311,29 @@
 							<div class="form__item">
 								<label>
 									<span>Name *</span>
-									<input class="input" data-validate data-required autocomplete="off" type="text" name="name" data-error="Error *" placeholder="Andrey">
+									<input class="input" data-validate data-required autocomplete="off" type="text" name="name"
+										data-error="Error *" placeholder="Andrey">
 								</label>
 							</div>
 							<div class="form__item">
 								<label>
 									<span>Email *</span>
-									<input class="input" data-validate data-required="email" type="text" name="form[email]" data-error=" Error *" placeholder="andrey@gmail.com">
+									<input class="input" data-validate data-required="email" type="text" name="form[email]"
+										data-error=" Error *" placeholder="andrey@gmail.com">
 								</label>
 							</div>
 							<div class="form__item">
 								<label>
 									<span>Phone number</span>
-									<input class="input" autocomplete="off" type="tel" name="phone" data-error="Error *" placeholder="+7 900 000 66 77">
+									<input class="input" autocomplete="off" type="tel" name="phone" data-error="Error *"
+										placeholder="+7 900 000 66 77">
 								</label>
 							</div>
 							<div class="form__item">
 								<label>
 									<span>Message *</span>
-									<input class="input" data-validate data-required autocomplete="off" type="text" name="message" placeholder="More info" data-error="Empty field *">
+									<input class="input" data-validate data-required autocomplete="off" type="text" name="message"
+										placeholder="More info" data-error="Empty field *">
 								</label>
 							</div>
 							<button class=" button" type="submit">Join the Course</button>
